Added get-date function to get current date

--- a/html/print_contents.html
+++ b/html/print_contents.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title> Print the Contents </title>
+	<meta charset= utf-8 />
 	<script src ="/home/cyrus/Documents/just-practice/javascript/print_current_page.js"> </script>
 </head>
 <body>
