--- a/html/get-date.html
+++ b/html/get-date.html
@@ -7,5 +7,10 @@
 	</head>
 	<body>
 
+		<p> This is todays current date and time </p>
+		<p id = "print"> </p>
+		<script> document.getElementById("print").innerHTML = get_date() </script>
+
 	</body>
+
 </html>
